# cvCodes

./: .gitignore  README.md
hw4/: CMakeCache.txt  (+9 more)
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgDisplay  imgDisplay.cpp  play  play.cpp  readme.txt
project1/task2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  filter.cpp  filter.h  imgDisplay_bak.cpp  timeBlur  timeBlur.cpp  vidDisplay  vidDisplay.cpp
project1/task2/FaceDetect/: faceDetect.cpp  faceDetect.h  showFaces.cpp
project2/: .CMakeLists.txt.swn  .csv_util.h.swo  .csv_util.h.swp  .dist.cpp.swn  .dist.cpp.swo  .dist.cpp.swp  .dist.h.swp  .establishCsv.cpp.swp  .features.cpp.swm  .features.cpp.swn  .features.cpp.swp  .features.h.swo  .features.h.swp  .imgMatch.cpp.swp  .readfile.cpp.swp  .readfile.h.swp  .readme.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  csv_util.cpp  dist.cpp  dist.h  establishCsv  establishCsv.cpp  features.cpp  features.h  imgCsv  imgMatch  imgMatch.cpp  readfile.cpp  readfile.h  readme.txt
project2/.cache/clangd/index/: csv_util.cpp.7F365EE84AD92D13.idx  csv_util.h.2F5F93DD0F81F0F0.idx  dist.cpp.DA486BE1E2A7177C.idx  dist.h.5F4AFF782FD7517B.idx  establishCsv.cpp.D854672D2EB8FD3F.idx  features.cpp.7D9026BF875FD27C.idx  features.h.D84383E4F669D2E5.idx  imgMatch.cpp.BB91A60C0400E684.idx  readfile.cpp.7BCA0126CAB59A42.idx  readfile.h.94C7F79509428800.idx
project2/featureCsvs/: .~lock.ResNet18_olym.csv#  gaborhist
project2/featureCsvs_bak/: 7x7csv
project2/tmp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sy  sy.cpp
project3/: .debug.cpp.swp  .denoise.cpp.swp  .features.cpp.swp  .features.h.swp  .main.cpp.swp  .readme.txt.swo  .region.cpp.swp  .region.h.swp  .threshold.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists_bak  Makefile  cleanup.cpp  cleanup.h  cmake_install.cmake  compile_commands.json  csv_util.cpp  debug  debug.cpp  denoise.cpp  denoise.h  dist.cpp  dist.h  features.cpp  features.h  main  main.cpp  readme.txt  recognize  recognize.cpp  region.cpp  region.h  region_bak.cpp  region_swa  threshold.cpp  threshold.h  vidDis  vidDis.cpp
project3/.cache/clangd/index/: cleanup.h.04B69470269A4DD1.idx  csv_util.cpp.6F64075883817BCC.idx  csv_util.h.A86C290E80C759D2.idx  debug.cpp.D01BB301A6E873CE.idx  denoise.cpp.D4A9AC70FED3CDA4.idx  denoise.h.B832E9F19FFC440A.idx  dist.cpp.680BD290F46BA8A4.idx  dist.h.9082810DCE890C3B.idx  (+11 more)
project3/NetWorkThings/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dnn  dnnEmbedding.cpp  dnnEmbedding.h  dnnexample.cpp  or2d-normmodel-007.onnx
project3/trainset/: bak  featureCsv
project4/: CMakeCache.txt  CMakeLists.txt  CalPos  CalPos.cpp  Makefile  RobustFeature  RobustFeature.cpp  RobustFeature_bak  cmake_install.cmake  compile_commands.json  extension  extension.cpp  extension_bak  intcPara.txt  main  main.cpp  readme.txt  sobel.cpp  sobel.h
project5/: CMakeCache.txt  CMakeLists.txt  Makefile  ansImage1.npy  ansImage10.npy  ansImage2.npy  ansImage3.npy  ansImage4.npy  ansImage5.npy  ansImage6.npy  ansImage7.npy  ansImage8.npy  ansImage9.npy  cmake_install.cmake  compile_commands.json  dnn  dnnEmbedding.cpp  dnnEmbedding.h  dnnexample.cpp  filter  filter.cpp  filters.npy  image.npy  main  main.cpp  mnist_model.onnx  mnist_model_wieghts.pth  preprocess.cpp  preprocess.h  script.py  task2.py  use.py
projectFinal/SnakeGame/: CMakeCache.txt  CMakeLists.txt  CalPos.cpp  CalPos.hpp  Makefile  cmake_install.cmake  compile_commands.json  match_tmp.cpp  patternMatch.cpp  snakegame  snakegame.cpp
temp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  four  four.cpp  fourier  fourier.cpp  myFour  myFour.cpp
(+79 files in other folders)
